--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.19.0",
     "react-router-dom": "^6.19.0",
+    "react-sound": "^1.2.0",
     "sass": "^1.69.5",
     "socket.io-client": "^4.7.2"
   },
